<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/default_product_size"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="@dimen/default_product_size"
            android:layout_height="@dimen/default_product_size"
            android:contentDescription="@string/product"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tvFarmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:singleLine="false"
            app:layout_constraintBottom_toBottomOf="@id/ivProduct"
            android:gravity="center_horizontal"
            android:text="@string/farmer"
            android:background="@color/transparent"
            android:textColor="@color/lightgray" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ivProduct"
            android:padding="4dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textStyle="bold"
                android:text="@string/product" />

            <TextView
                android:id="@+id/tvDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                android:background="@color/red"
                android:text="@string/discount"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvOriginalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintLeft_toRightOf="@id/tvDiscount"
                android:text="@string/price"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/tvFinalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@id/tvOriginalPrice"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textStyle="bold"
                android:text="@string/price"
                android:textColor="@color/red"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>